[metadata]
name = deap
author = ???
author_email = ???
description = ???
license = ???
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: Unix
    Programming Language :: Python

[files]
packages = 
    gui
    document
    interpreter

data_files = deap.py
